--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,11 @@
       "src": "img/bg.png",
       "type": "image/png",
       "sizes": "48x48"
+    },
+    {
+      "src": "img/logoB.png",
+      "type": "image/png",
+      "sizes": "144x144"
     }
   ],
   "start_url": "/?utm_source=homescreen",
