--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
       "sizes": "48x48"
     },
     {
-      "src": "img/logoB.png",
+      "src": "favicon144x144.png",
       "type": "image/png",
       "sizes": "144x144"
     }
