--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
       "sizes": "144x144"
     }
   ],
-  "start_url": "/?utm_source=homescreen",
+  "start_url": "/otokar_test/?homescreen=1",
   "background_color": "#23507a",
   "display": "standalone",
   "theme_color": "#23507a"
